--- a/beispiele/motor-fe/public/area.css
+++ b/beispiele/motor-fe/public/area.css
@@ -2,7 +2,6 @@
 body {
     margin: 0;
     background-color: #0d0a55;
-    transition: ease background-color 300ms;
 }
 .area-control {
     width: 100vw;
@@ -99,5 +98,44 @@ h1 {
 }
 
 body.dead {
+
+}
+
+.area-reload {
+    display: none;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+
     background-color: #000;
+    z-index: 1000;
+    transition: ease opacity 300ms;
+
+    justify-content: center;
+    align-items: center;
+}
+
+.area-reload.visible {
+    opacity: 1;
+    display: flex;
+}
+
+.area-reload .btn-reload {
+    padding: 0;
+    border: none;
+    background: none;
+    cursor: pointer;
+}
+
+.area-reload .btn-reload svg {
+    transition: ease opacity 300ms;
+    opacity: 0.4;
+}
+
+.area-reload .btn-reload:hover svg,
+.area-reload .btn-reload:active svg{
+    opacity: 0.8;
 }
