--- a/beispiele/motor-fe/public/area.css
+++ b/beispiele/motor-fe/public/area.css
@@ -50,6 +50,8 @@ h1 {
     top: 0;
     right: 0;
     z-index: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .area-buttons .icon-arrows {
@@ -60,16 +62,21 @@ h1 {
     background: none;
     border: none;
     padding: 10px;
-    color: rgba(255,255,255,0.4);
+    opacity: 0.4;
+    transition: ease opacity 300ms;
     cursor: pointer;
 }
 
-.area-buttons button svg {
-    fill: rgba(255,255,255,0.4);
+.area-buttons button:hover,
+.area-buttons button:focus {
+    opacity: 0.7;
 }
-.area-buttons button:hover svg,
-.area-buttons button:focus svg{
-    fill: rgba(255,255,255,0.7);
+
+.area-buttons .btn-light.on {
+    opacity: 1;
+}
+.area-buttons .btn-light.on:hover {
+    opacity: 0.7;
 }
 
 .area-config ul {
