Kommunikation zwischen den Kameracontrolern und dem Socket auf Events geändert, camera-button-control.js hinzugefügt.

--- a/beispiele/motor-fe/public/area-control.css
+++ b/beispiele/motor-fe/public/area-control.css
@@ -4,3 +4,11 @@
     margin: 0;
     position: relative;
 }
+
+.area-control .info {
+    position: absolute;
+    bottom: 0;
+    height: 100px;
+    overflow-y: auto;
+    padding: 5px 10px;
+}
