mit npm run stub kann die App jetzt auch außerhalb vom Raspberry Pi ausgeführt werden. Die GPIO Sachen werden dafür gestubt.

--- a/beispiele/motor-fe/public/area-buttons.css
+++ b/beispiele/motor-fe/public/area-buttons.css
@@ -19,6 +19,7 @@
     transition: ease opacity 300ms;
     cursor: pointer;
     color: #fff;
+    user-select: none;
 }
 
 .area-buttons button:hover,
